--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="" id="linkAnnouncement" style="text-decoration:none;"
+                            <a class="nav-link" href="/Announcement/AnnouncementList" id="linkAnnouncement" style="text-decoration:none;"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
                                 <i class="bi bi-exclamation-circle"></i> THÔNG BÁO
