--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -2,11 +2,11 @@
     switch (ViewData["page"])
     {
         case "HomePage":
-        case "SchoolYear":
+        case "HchoolYear":
         case "EndSemesterReport":
         case "SemesterPlan":
         case "Statistics":
-        case "Index_ProfileManager":
+        case "Index_profilemanager":
         case "ShowStatistics":
         case "ClassList":
         case "StudentList":
@@ -16,8 +16,8 @@
             Layout = "_PersonnelLayout";
             break;
     }
-} *@
-
+}
+ *@
 
 @inject IHttpContextAccessor HttpContextAccessor
 
