--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -1,8 +1,12 @@
-﻿@model CAPSTONE_TEAM01_2024.ViewModels.SchoolYearViewModel
+﻿@inject IHttpContextAccessor HttpContextAccessor
+@model CAPSTONE_TEAM01_2024.ViewModels.SchoolYearViewModel
 
 @{
     ViewData["Title"] = "School Year";
     int number = (Model.AcademicPeriods.PageIndex - 1) * Model.AcademicPeriods.PageSize;
+    var rolesString = HttpContextAccessor.HttpContext.Session.GetString("Roles");
+    var roles = rolesString?.Split(',') ?? new string[0];
+    bool isNotStudent = !roles.Contains("Sinh Viên");
 }
 
 <div class="content-wrapper" style="min-height: 912.2px;">
@@ -15,16 +19,18 @@
             </div>
         </div>
     </header>
-
     <main class="content">
         <div class="container-fluid">
             <div class="card">
                 <div class="card-header">
                     <div class="row text-center">
                         <div class="col-auto">
-                            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#AddPeriodModal">
-                                <i class="bi bi-plus custom-icon"></i> Thêm Năm Học
-                            </button>
+                            @if (isNotStudent)
+                            {
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#AddPeriodModal">
+                                    <i class="bi bi-plus custom-icon"></i> Thêm Năm Học
+                                </button>
+                            }
                         </div>
                         <div class="col">
                             <nav class="navbar navbar-light bg-light">
@@ -55,7 +61,10 @@
                                 <th scope="col">Năm Học</th>
                                 <th scope="col">Thời Gian Bắt Đầu</th>
                                 <th scope="col">Thời Gian Kết Thúc</th>
-                                <th scope="col">Thao Tác</th>
+                                @if (isNotStudent)
+                                {
+                                    <th scope="col">Thao Tác</th>
+                                }
                             </tr>
                         </thead>
                         <tbody id="classTable">
@@ -67,20 +76,23 @@
                                     <td class="text-center">@period.PeriodName</td>
                                     <td class="text-center">@period.PeriodStart.ToString("yyyy-MM-dd")</td>
                                     <td class="text-center">@period.PeriodEnd.ToString("yyyy-MM-dd")</td>
-                                    <td class="text-center">
-                                        <button type="button" class="btn btn-outline-primary btn-sm"
-                                                data-bs-toggle="modal"
-                                                data-bs-target="#EditPeriodModal"
-                                                onclick="openEditModal('@period.PeriodId', '@period.PeriodName', '@period.PeriodStart.ToString("yyyy-MM-dd")', '@period.PeriodEnd.ToString("yyyy-MM-dd")')">
-                                            <i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
-                                        </button>
-                                        <button type="button" class="btn btn-outline-danger btn-sm"
-                                                data-bs-toggle="modal"
-                                                data-bs-target="#DeletePeriodModal"
-                                                onclick="openDeleteModal('@period.PeriodId')">
-                                            <i class="fa-solid fa-trash custom-icon"></i> Xóa
-                                        </button>
-                                    </td>
+                                    @if (isNotStudent)
+                                    {
+                                        <td class="text-center">
+                                            <button type="button" class="btn btn-outline-primary btn-sm"
+                                            data-bs-toggle="modal"
+                                            data-bs-target="#EditPeriodModal"
+                                            onclick="openEditModal('@period.PeriodId', '@period.PeriodName', '@period.PeriodStart.ToString("yyyy-MM-dd")', '@period.PeriodEnd.ToString("yyyy-MM-dd")')">
+                                                <i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
+                                            </button>
+                                            <button type="button" class="btn btn-outline-danger btn-sm"
+                                            data-bs-toggle="modal"
+                                            data-bs-target="#DeletePeriodModal"
+                                            onclick="openDeleteModal('@period.PeriodId')">
+                                                <i class="fa-solid fa-trash custom-icon"></i> Xóa
+                                            </button>
+                                        </td>
+                                    }
                                 </tr>
                             }
                             <tr id="noresults" style="display: none;">
