Update slide bar

--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -189,7 +189,7 @@
     </div>
 </div>
 
-<<!-- Edit Period Modal -->
+<!-- Edit Period Modal -->
 <div class="modal fade" id="EditPeriodModal" tabindex="-1" aria-labelledby="EditPeriodModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
