--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -77,7 +77,7 @@
                                     <a class="dropdown-item" href="/ProfileManager/AdvisorProfiles" id="linkAdvisorProfiles" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-person-vcard-fill"></i> Cố Vấn/ BCN Khoa
+                                        <i class="bi bi-person-vcard-fill"></i> Nhân Sự
                                     </a>
                                 </li>
                                 <li>
@@ -90,19 +90,36 @@
                             </ul>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu3" id="toggleMenu3"
+                               onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                               onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                <i class="bi bi-exclamation-circle"></i> THÔNG BÁO <i class="bi bi-caret-down-fill" style="float:right;"></i>
+                            </a>
+                            <ul class="collapse" id="dropdownMenu3" style="list-style-type: none; padding-left: 35px;">
+                                <li>
+                                    <a class="dropdown-item" href="/Announcement/AnnouncementList" id="linkAnnouncement" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-journal-text"></i> Danh Sách
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#" id="linkMyAnnouncement" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-person-badge"></i> Của Tôi
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/Statistics/ShowStatistics" id="linkStatistics" style="text-decoration:none;"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
                                 <i class="bi bi-graph-up"></i> THỐNG KÊ
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Announcement/AnnouncementList" id="linkAnnouncement" style="text-decoration:none;"
-                               onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                               onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                <i class="bi bi-exclamation-circle"></i> THÔNG BÁO
-                            </a>
-                        </li>
+                      
                         <li class="nav-item">
                             <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu2" id="toggleMenu2"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
@@ -121,14 +138,14 @@
                                     <a class="dropdown-item" href="/Categories/ClassList" id="linkClassList" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-person-badge"></i> Lớp Học
+                                        <i class="bi bi-mortarboard"></i> Lớp Học
                                     </a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="/Categories/StudentList" id="linkClassList" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-person-lines-fill"></i> Danh Sách Sinh Viên
+                                        <i class="bi bi-person-lines-fill"></i>  Sinh Viên
                                     </a>
                                 </li>
                                 <li>
