Notification system done

--- a/CAPSTONE_TEAM01_2024/Views/Announcement/AnnouncementList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Announcement/AnnouncementList.cshtml
@@ -1,7 +1,7 @@
 @model CAPSTONE_TEAM01_2024.Utilities.PaginatedList<CAPSTONE_TEAM01_2024.Models.Announcement>
 
 @{
-ViewData["Title"] = "Announcement";
+ViewData["Title"] = "Announcements";
 }
 <div class="content-wrapper" style="min-height: 912.2px;">
 	<!-- Content Header (Page header) -->
