--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -107,7 +107,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#" id="linkMyAnnouncement" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Announcement/MyAnnouncements" id="linkMyAnnouncement" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
                                         <i class="bi bi-person-badge"></i> Của Tôi <span id="myAnnouncementCount" class="badge rounded-pill bg-danger " style="display:none;"></span>
