--- a/CAPSTONE_TEAM01_2024/Views/Announcement/AnnouncementList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Announcement/AnnouncementList.cshtml
@@ -1,7 +1,11 @@
 @model CAPSTONE_TEAM01_2024.Utilities.PaginatedList<CAPSTONE_TEAM01_2024.Models.Announcement>
-
+@inject IHttpContextAccessor HttpContextAccessor
 @{
 ViewData["Title"] = "Announcements";
+var rolesString = HttpContextAccessor.HttpContext.Session.GetString("Roles");
+var roles = rolesString?.Split(',') ?? new string[0];
+bool isNotAdvitors = !roles.Contains("Cố Vấn");
+
 }
 <div class="content-wrapper" style="min-height: 912.2px;">
 	<!-- Content Header (Page header) -->
@@ -22,11 +26,16 @@ ViewData["Title"] = "Announcements";
 			<div class="card">
 				<div class="card-header">
 					<div class="row text-center">
+						@if (isNotAdvitors)
+						{	
 						<div class="col-auto">
 							<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#AddAnnouncementModal">
 								<i class="bi bi-plus custom-icon"></i> Tạo Thông Báo
 							</button>
 					</div>
+						}
+	
+
 						<div class="col">
 							<nav class="navbar navbar-light bg-light">
 								<form class="d-flex ms-auto">
@@ -59,7 +68,11 @@ ViewData["Title"] = "Announcements";
 								<th scope="col">Thời Gian Bắt Đầu</th>
 								<th scope="col">Thời Gian Kết Thúc</th>
 								<th scope="col">Loại Kế Hoạch</th>
+								@if (isNotAdvitors)
+								{	
 								<th scope="col">Thao Tác</th>
+								}
+
 							</tr>
 						</thead>
 						<tbody id="classTable">
@@ -72,6 +85,8 @@ ViewData["Title"] = "Announcements";
 								<td class="text-center">@announcement.EndTime.ToString("dd-MM-yyyy")</td>
 								<td class="text-center">@announcement.Type</td>
 								<td class="text-center">
+									@if (isNotAdvitors)
+									{	
 									<button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#EditAnnouncementModal"
 											data-id="@announcement.Id"
 											data-detail="@announcement.Detail"
@@ -79,13 +94,15 @@ ViewData["Title"] = "Announcements";
 											data-endtime="@announcement.EndTime.ToString("yyyy-MM-dd")"
 											data-type="@announcement.Type"
 											onclick="editAnnouncement(this)">
-										<i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
+										<i class="fa-solid fa-pen-to-square custom-icon"></i> 
 									</button>
 									<button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteAnnouncementModal"
 											data-id="@announcement.Id"
 											onclick="deleteAnnouncement(this)">
-										<i class="fa-solid fa-trash custom-icon"></i> Xóa
+										<i class="fa-solid fa-trash custom-icon"></i> 
 									</button>
+									}
+
 								</td>
 							</tr>
 							}
