--- a/CAPSTONE_TEAM01_2024/Views/Categories/ClassList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/ClassList.cshtml
@@ -105,14 +105,14 @@
                                                     data-advisor-email="@classItem.Advisor.Email"
                                                     data-student-count="@classItem.StudentCount"
                                                     onclick="openEditModal(this)">
-                                                <i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
+                                                <i class="fa-solid fa-pen-to-square custom-icon"></i> 
                                             </button>
                                             <button type="button" class="btn btn-outline-danger btn-sm"
                                                     data-bs-toggle="modal"
                                                     data-bs-target="#DeleteClassModal"
                                                     data-class-id="@classItem.ClassId"
                                                     onclick="openDeleteModal(this)">
-                                                <i class="fa-solid fa-trash custom-icon"></i> Xóa
+                                                <i class="fa-solid fa-trash custom-icon"></i> 
                                             </button>
                                         </td>
                                     }
