--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -83,13 +83,13 @@
                                             data-bs-toggle="modal"
                                             data-bs-target="#EditPeriodModal"
                                             onclick="openEditModal('@period.PeriodId', '@period.PeriodName', '@period.PeriodStart.ToString("yyyy-MM-dd")', '@period.PeriodEnd.ToString("yyyy-MM-dd")')">
-                                                <i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
+                                                <i class="fa-solid fa-pen-to-square custom-icon"></i> 
                                             </button>
                                             <button type="button" class="btn btn-outline-danger btn-sm"
                                             data-bs-toggle="modal"
                                             data-bs-target="#DeletePeriodModal"
                                             onclick="openDeleteModal('@period.PeriodId')">
-                                                <i class="fa-solid fa-trash custom-icon"></i> Xóa
+                                                <i class="fa-solid fa-trash custom-icon"></i> 
                                             </button>
                                         </td>
                                     }
