--- a/CAPSTONE_TEAM01_2024/Views/Categories/StudentList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/StudentList.cshtml
@@ -93,12 +93,12 @@
                                                 data-classid="@student.ClassId" 
                                                 data-status="@student.Status" 
                                                 onclick="editStudent(this)">
-                                            <i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
+                                            <i class="fa-solid fa-pen-to-square custom-icon"></i> 
                                         </button>
                                         <button type="button" class="btn btn-outline-danger btn-sm" 
                                                 data-bs-toggle="modal" data-bs-target="#DeleteStudentModal" 
                                                 data-student-id="@student.Id">
-                                            <i class="fa-solid fa-trash custom-icon"></i> Xóa
+                                            <i class="fa-solid fa-trash custom-icon"></i> 
                                         </button>
                                     </td>
                                 </tr>
