--- a/CAPSTONE_TEAM01_2024/Views/ProfileManager/AdvisorProfiles.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/ProfileManager/AdvisorProfiles.cshtml
@@ -1,5 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Advisor Profiles";
+﻿@inject IHttpContextAccessor HttpContextAccessor
+@{
+ViewData["Title"] = "Advisor Profiles";
+var rolesString = HttpContextAccessor.HttpContext.Session.GetString("Roles");
+var roles = rolesString?.Split(',') ?? new string[0];
+bool isNotAdvitors = !roles.Contains("Cố Vấn");
 }
 @model CAPSTONE_TEAM01_2024.Utilities.PaginatedList<CAPSTONE_TEAM01_2024.ViewModels.AdvisorProfileViewModel>
 
@@ -18,7 +22,15 @@
             <div class="card">
                 <div class="card-header">
                     <div class="row text-center">
-                       
+                        @if (isNotAdvitors)
+                        {
+                        <div class="col-auto">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#AddAdvisorModal">
+                                <i class="bi bi-plus custom-icon"></i> Thêm Nhân Sự
+                            </button>
+                        </div>
+                        }
+
                         <div class="col">
                             <nav class="navbar navbar-light bg-light">
                                 <form class="d-flex ms-auto">
@@ -31,66 +43,81 @@
                 <div class="card-body">
                     @if (ViewBag.Warning != null)
                     {
-                        <div class="alert alert-warning">
-                            @ViewBag.Warning
-                        </div>
+                    <div class="alert alert-warning">
+                        @ViewBag.Warning
+                    </div>
                     }
                     @if (ViewBag.Success != null)
                     {
-                        <div class="alert alert-success">
-                            @ViewBag.Success
-                        </div>
+                    <div class="alert alert-success">
+                        @ViewBag.Success
+                    </div>
                     }
                     @if (ViewBag.Error != null)
                     {
-                        <div class="alert alert-danger">
-                            @ViewBag.Error
-                        </div>
+                    <div class="alert alert-danger">
+                        @ViewBag.Error
+                    </div>
                     }
 
                     <table class="table table-striped">
                         <thead>
-                            <tr class="text-center">
-                                <th scope="col">#</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Mã Nhân Sự</th>
-                                <th scope="col">Tên Đầy Đủ</th>
-                                <th scope="col">Vai Trò</th>
-                                <th scope="col">Trạng Thái</th>
-                                <th scope="col">Lần Truy Cập Gần Nhất</th>
-                               
-                            </tr>
+                        <tr class="text-center">
+                            <th scope="col">#</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Mã Nhân Sự</th>
+                            <th scope="col">Tên Đầy Đủ</th>
+                            <th scope="col">Vai Trò</th>
+                            <th scope="col">Trạng Thái</th>
+                            <th scope="col">Lần Truy Cập Gần Nhất</th>
+                            @if (isNotAdvitors)
+                            {
+                            <th scope="col">Thao Tác</th>
+                            }
+
+                        </tr>
                         </thead>
                         <tbody id="advisorTable">
-                            @{
-                                int number = (Model.PageIndex - 1) * Model.PageSize;
-                            }
-                            @foreach (var advisor in Model)
+                        @{
+                        int number = (Model.PageIndex - 1) * Model.PageSize;
+                        }
+                        @foreach (var advisor in Model)
+                        {
+                        number++;
+                        <tr>
+                            <td class="text-center">@number</td>
+                            <td class="text-center">@advisor.Email</td>
+                            <td class="text-center">@advisor.SchoolId</td>
+                            <td class="text-center">@advisor.FullName</td>
+                            <td class="text-center">@advisor.Role</td>
+                            <td class="text-center">
+                                @if (advisor.IsRegistered)
+                                {
+                                <span class="badge bg-success">Đã Kích Hoạt</span>
+                                }
+                                else
+                                {
+                                <span class="badge bg-warning text-dark">Chưa Kích Hoạt</span>
+                                }
+                            </td>
+                            <td class="text-center">@advisor.LastLoginTime?.ToString("g")</td>
+                            @if (isNotAdvitors)
                             {
-                                number++;
-                                <tr>
-                                    <td class="text-center">@number</td>
-                                    <td class="text-center">@advisor.Email</td>
-                                    <td class="text-center">@advisor.SchoolId</td>
-                                    <td class="text-center">@advisor.FullName</td>
-                                    <td class="text-center">@advisor.Role</td>
-                                    <td class="text-center">
-                                        @if (advisor.IsRegistered)
-                                        {
-                                            <span class="badge bg-success">Đã Kích Hoạt</span>
-                                        }
-                                        else
-                                        {
-                                            <span class="badge bg-warning text-dark">Chưa Kích Hoạt</span>
-                                        }
-                                    </td>
-                                    <td class="text-center">@advisor.LastLoginTime?.ToString("g")</td>
-                                   
-                                </tr>
+                            <td class="text-center">
+                                <button type="button" class="btn btn-outline-primary btn-sm"
+                                        onclick="openEditModal('@advisor.Email', '@advisor.Role', '@advisor.Id', '@advisor.SchoolId')">
+                                    <i class="fa-solid fa-pen-to-square custom-icon"></i> 
+                                </button>
+                                <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteAdvisorModal" data-advisor-id="@advisor.Id">
+                                    <i class="fa-solid fa-trash custom-icon"></i>
+                                </button>
+                            </td>
                             }
-                            <tr id="noresults" style="display: none;">
-                                <td colspan="7" class="text-center">Không tìm thấy nội dung</td>
-                            </tr>
+                        </tr>
+                        }
+                        <tr id="noresults" style="display: none;">
+                            <td colspan="7" class="text-center">Không tìm thấy nội dung</td>
+                        </tr>
                         </tbody>
                     </table>
 
@@ -99,48 +126,48 @@
                         <ul class="pagination justify-content-end">
                             @if (Model.HasPreviousPage)
                             {
-                                <li class="page-item">
-                                    <a class="page-link" asp-action="AdvisorProfiles" asp-route-pageIndex="@(Model.PageIndex - 1)" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
+                            <li class="page-item">
+                                <a class="page-link" asp-action="AdvisorProfiles" asp-route-pageIndex="@(Model.PageIndex - 1)" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
                             }
                             else
                             {
-                                <li class="page-item disabled">
-                                    <a class="page-link" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
+                            <li class="page-item disabled">
+                                <a class="page-link" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
                             }
 
                             @for (var i = 1; i <= Model.TotalPages; i++)
                             {
-                                if (i == Model.PageIndex)
-                                {
-                                    <li class="page-item active"><a class="page-link">@i</a></li>
-                                }
-                                else
-                                {
-                                    <li class="page-item"><a class="page-link" asp-action="AdvisorProfiles" asp-route-pageIndex="@i">@i</a></li>
-                                }
+                            if (i == Model.PageIndex)
+                            {
+                            <li class="page-item active"><a class="page-link">@i</a></li>
+                            }
+                            else
+                            {
+                            <li class="page-item"><a class="page-link" asp-action="AdvisorProfiles" asp-route-pageIndex="@i">@i</a></li>
+                            }
                             }
 
                             @if (Model.HasNextPage)
                             {
-                                <li class="page-item">
-                                    <a class="page-link" asp-action="AdvisorProfiles" asp-route-pageIndex="@(Model.PageIndex + 1)" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
+                            <li class="page-item">
+                                <a class="page-link" asp-action="AdvisorProfiles" asp-route-pageIndex="@(Model.PageIndex + 1)" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
                             }
                             else
                             {
-                                <li class="page-item disabled">
-                                    <a class="page-link" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
+                            <li class="page-item disabled">
+                                <a class="page-link" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
                             }
                         </ul>
                     </nav>
@@ -155,7 +182,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="AddAdvisorModalLabel">Thêm Cố Vấn mới</h5>
+                <h5 class="modal-title" id="AddAdvisorModalLabel">Thêm CVHT mới</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -169,7 +196,7 @@
                         <div class="dropdown">
                             <select class="form-control dropdown-toggle" id="SchoolId" name="SchoolId" onchange="updateRoleId();" required>
                                 <option value="" disabled selected>Chọn vai trò</option>
-                                <option value="ADVISOR">Cố Vấn</option>
+                                <option value="ADVISOR">CVHT</option>
                                 <option value="FACULTY">BCN Khoa</option>
                             </select>
                             <i class="bi bi-caret-down-fill" style="position: absolute; right: 15px; top: 50%; transform: translateY(-50%);"></i>
@@ -190,13 +217,13 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="DeleteModalLabel">Xóa Cố Vấn</h5>
+                <h5 class="modal-title" id="DeleteModalLabel">Xóa CVHT</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form asp-action="DeleteAdvisor" method="post">
                 <div class="modal-body">
                     <input type="hidden" id="advisorId" name="advisorId" />
-                    <p>Bạn có chắc chắn muốn xóa cố vấn này không?</p>
+                    <p>Bạn có chắc chắn muốn xóa CVHT này không?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
@@ -211,7 +238,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="EditAdvisorModalLabel">Cập nhật Cố Vấn</h5>
+                <h5 class="modal-title" id="EditAdvisorModalLabel">Cập nhật CVHT</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -225,7 +252,7 @@
                         <div class="dropdown">
                             <select class="form-control dropdown-toggle" id="editVaiTro" name="SchoolId" onchange="updateEditRoleId();" required>
                                 <option value="" disabled>Chọn vai trò</option>
-                                <option value="ADVISOR">Cố Vấn</option>
+                                <option value="ADVISOR">CVHT</option>
                                 <option value="FACULTY">BCN Khoa</option>
                             </select>
                             <i class="bi bi-caret-down-fill" style="position: absolute; right: 15px; top: 50%; transform: translateY(-50%);"></i>
@@ -244,7 +271,7 @@
 </div>
 
 <script>
-//Add Modal JS
+    //Add Modal JS
     function updateRoleId() {
         var role = document.getElementById('SchoolId').value;
         var roleIdField = document.getElementById('roleId');
@@ -256,7 +283,7 @@
         }
     }
 
-//Edit modal JS
+    //Edit modal JS
     function openEditModal(email, role, userId, schoolId) {
         document.getElementById('editEmail').value = email;
         document.getElementById('editUserId').value = userId;
@@ -280,7 +307,7 @@
             roleIdField.value = '0A65637D-CA3F-403C-9F0D-F5F31FF540C0';
         }
     }
-//Delete modal JS
+    //Delete modal JS
     var deleteModal = document.getElementById('DeleteAdvisorModal');
     deleteModal.addEventListener('show.bs.modal', function (event) {
         var button = event.relatedTarget; // Button that triggered the modal
@@ -288,7 +315,7 @@
         var input = deleteModal.querySelector('#advisorId');
         input.value = advisorId; // Update the modal's content.
     });
-//Search JS
+    //Search JS
     document.getElementById('searchInput').addEventListener('input', function () {
         var searchValue = this.value.toLowerCase();
         var rows = document.querySelectorAll('#advisorTable tr');
@@ -318,7 +345,3 @@
         }
     });
 </script>
-
-
-
-
