--- a/CAPSTONE_TEAM01_2024/Views/ProfileManager/StudentProfiles.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/ProfileManager/StudentProfiles.cshtml
@@ -94,7 +94,7 @@
                                             <i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
                                         </button> *@
                                         <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteStudentModal" data-student-id="@student.Id">
-                                            <i class="fa-solid fa-trash custom-icon"></i> Xóa
+                                            <i class="fa-solid fa-trash custom-icon"></i> 
                                         </button>
                                     </td>
                                 </tr>
