--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>@ViewData["Title"] - CAPSTONE_TEAM01_2024</title>
-
+    <link rel="icon" type="image/x-icon" href="~/Resources/Img/logoVL.png">
     <link rel="stylesheet" href="~/CAPSTONE_TEAM01_2024.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
